[DOC[ thesis: fix wrong formatting in bibtex file

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -30,7 +30,8 @@
   pages = {1331-1374},
   publisher = {Institute of Mathematical Statistics},
   timestamp = {2013-11-10T22:34:13.000+0100},
-  title = {Convergence of algorithms for reconstructing convex bodies and directional measures},
+  title = {Convergence of algorithms for reconstructing convex bodies and
+  directional measures},
   volume = 34,
   year = 2006
 }
@@ -121,19 +122,37 @@
 TODO: correct the place of publishing of Lele's B. S. Thesis.
 
 @article{journals/josaa/LeleKW92,
-author = {A. S. Lele and S. R. Kulkarni and A. S. Willsky},
-journal = {J. Opt. Soc. Am. A},
-keywords = {},
-number = {10},
-pages = {1693--1714},
-publisher = {OSA},
-title = {Convex-polygon estimation from support-line measurements and applications to target reconstruction from laser-radar data},
-volume = {9},
-month = {Oct},
-year = {1992},
-url = {http://josaa.osa.org/abstract.cfm?URI=josaa-9-10-1693},
-doi = {10.1364/JOSAA.9.001693},
-abstract = {We address techniques for the estimation of convex polygons from support-line measurements and introduce the application of these methods to laser-radar data. The algorithms developed use varying degrees of prior information. Quantitative assessments of their performance with respect to various parameters are provided. As expected, prior information concerning object shape and orientation greatly improves performance. It is interesting that nearly the same performance is obtained with and without prior information about object orientation, and this enables us to extract an estimate of orientation. These convex-polygon estimation techniques are applied to the problem of target reconstruction from range-resolved and Doppler-resolved laser-radar data. The resulting reconstructions provide size and shape estimates of the targets under observation. Although such information can be obtained by other means (e.g., from reconstructed images using tomography), the present methods yield this information more directly. urthermore, estimates obtained by using these methods are more robust to noisy or sparse measurement data and are much more robust to data suffering from registration errors. Finally, the present methods are used to improve tomographic images in the presence of registration errors.},
+  author = {A. S. Lele and S. R. Kulkarni and A. S. Willsky},
+  journal = {J. Opt. Soc. Am. A},
+  keywords = {},
+  number = {10},
+  pages = {1693--1714},
+  publisher = {OSA},
+  title = {Convex-polygon estimation from support-line measurements and
+  applications to target reconstruction from laser-radar data},
+  volume = {9},
+  month = {Oct},
+  year = {1992},
+  url = {http://josaa.osa.org/abstract.cfm?URI=josaa-9-10-1693},
+  doi = {10.1364/JOSAA.9.001693},
+  abstract = {We address techniques for the estimation of convex polygons from
+  support-line measurements and introduce the application of these methods to
+  laser-radar data. The algorithms developed use varying degrees of prior
+  information. Quantitative assessments of their performance with respect to
+  various parameters are provided. As expected, prior information concerning
+  object shape and orientation greatly improves performance. It is interesting
+  that nearly the same performance is obtained with and without prior
+  information about object orientation, and this enables us to extract an
+  estimate of orientation. These convex-polygon estimation techniques are
+  applied to the problem of target reconstruction from range-resolved and
+  Doppler-resolved laser-radar data. The resulting reconstructions provide size
+  and shape estimates of the targets under observation. Although such
+  information can be obtained by other means (e.g., from reconstructed images
+  using tomography), the present methods yield this information more directly.
+  Furthermore, estimates obtained by using these methods are more robust to
+  noisy or sparse measurement data and are much more robust to data suffering
+  from registration errors. Finally, the present methods are used to improve
+  tomographic images in the presence of registration errors.},
 }
 @inproceedings{conf/compgeom/MehlhornNSSSSU96,
   added-at = {2002-12-13T00:00:00.000+0100},
