[DOC] thesis: add introduction about LKW artcle

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -712,6 +712,15 @@ Kulkarni и Willsky, которое было описано в статье
 \cite{journals/josaa/LeleKW92}. Более подробную информацию можно найти в
 дипломной работе Lele \cite{thesis/Lele90}.
 
+Данное исследование охватывает совершенно новую область применения --
+распознание формы объектов по данным лазерного радара. В ней описано обобщение
+первый алгоритма ближайшего набора Prince и Willsky для случая, когда
+направления, по которым производится измерение опорной функции, распределены
+произвольным образом. Также в ней вводится 2 новых алгоритма, которые позволяют
+строить тело на основе априорной информации о количестве его сторон и
+либо направлениях нормалей этих сторон, либо об относительных углах между этими
+направлениями.
+
 \newpage
 \section{Предлагаемый подход}
 
