[DOC] thesis: begin NUA algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -721,6 +721,27 @@ Kulkarni и Willsky, которое было описано в статье
 либо направлениях нормалей этих сторон, либо об относительных углах между этими
 направлениями.
 
+\subsubsection{Воосстановление многоугольника со сторонами по углам измерения}
+
+Данный алгоритм является обобщением алгоритма ближайшего набора из статьи Prince
+и Willsky, в котором тело строится по конечному набору величин
+$y_{1}, y_{2}, \ldots, y_{M}$,  которын представляют собой измеренные с
+погрешностями значениями опорной функции по направлениям вдоль известных углов
+$\theta_{1} < \theta_{2} < \ldots < \theta_{M}$, которые называются
+\textbf{углами измерения}. Отличие от упомянутого алгоритма состоит в том, что
+критерий матрица в неравенстве из критерия согласованности записывается
+несколько иным образом.
+
+Тройка опорных чисел $h_{i - 1}, h_{i}, h_{i + 1}$ по углам $\theta_{i - 1},
+\theta_{i}, \theta_{i + 1}$ являтся согласованной тогда и только тогда, когда
+выполнено следующее неравенство:
+
+$$
+h_{i - 1} sin(\theta_{i + 1} - \theta_{i}) -
+h_{i} sin(\theta_{i + 1} - \theta_{i - 1}) +
+h_{i + 1} sin(\theta_{i} - \theta_{i - 1}) \geq 0
+$$
+
 \newpage
 \section{Предлагаемый подход}
 
