[DOC] thesis: fix overflow of page width in formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -760,65 +760,65 @@ $$
  
  гдк матрица $C$ представляет собой следующее:
 
- $$
+  $$
  \left(
  \begin{array}{ccccccc}
 
-     -sin(\theta_{2} - \theta_{M}) &
-     sin(\theta_{1} - \theta_{M}) &
-     0 &
-     \ldots &
-     0 &
-     0 &
-     sin(\theta_{2} - \theta_{1}) \\
+\scriptstyle     -sin(\theta_{2} - \theta_{M}) &
+\scriptstyle     sin(\theta_{1} - \theta_{M}) &
+\scriptstyle     0 &
+\scriptstyle     \ldots &
+\scriptstyle     0 &
+\scriptstyle     0 &
+\scriptstyle     sin(\theta_{2} - \theta_{1}) \\
 
-      sin(\theta_{3} - \theta_{2}) &
-      -sin(\theta_{3} - \theta_{1}) &
-      sin(\theta_{2} - \theta_{1}) &
-      \ldots &
-      0 &
-      0 &
-      0 \\
+\scriptstyle      sin(\theta_{3} - \theta_{2}) &
+\scriptstyle      -sin(\theta_{3} - \theta_{1}) &
+\scriptstyle      sin(\theta_{2} - \theta_{1}) &
+\scriptstyle      \ldots &
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      0 \\
 
-      0 &
-      sin(\theta_{4} - \theta_{3}) &
-      -sin(\theta_{4} - \theta_{2}) &
-      \ldots &
-      0 &
-      0 &
-      0 \\
+\scriptstyle      0 &
+\scriptstyle      sin(\theta_{4} - \theta_{3}) &
+\scriptstyle      -sin(\theta_{4} - \theta_{2}) &
+\scriptstyle      \ldots &
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      0 \\
 
-      \vdots &
-      \vdots &
-      \vdots &
-      \ddots &
-      \vdots &
-      \vdots &
-      \vdots \\
+\scriptstyle      \vdots &
+\scriptstyle      \vdots &
+\scriptstyle      \vdots &
+\scriptstyle      \ddots &
+\scriptstyle      \vdots &
+\scriptstyle      \vdots &
+\scriptstyle      \vdots \\
 
-      0 &
-      0 &
-      0 &
-      \ldots &
-      -sin(\theta_{M - 1} - \theta_{M - 3}) &
-      sin(\theta_{M - 2} - \theta_{M - 3}) &
-      0 \\
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      \ldots &
+\scriptstyle      -sin(\theta_{M - 1} - \theta_{M - 3}) &
+\scriptstyle      sin(\theta_{M - 2} - \theta_{M - 3}) &
+\scriptstyle      0 \\
 
-      0 &
-      0 &
-      0 &
-      \ldots &
-      sin(\theta_{M} - \theta_{M - 1}) &
-      -sin(\theta_{M} - \theta_{M - 2}) &
-      sin(\theta_{M - 1} - \theta_{M - 2}) \\
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      \ldots &
+\scriptstyle      sin(\theta_{M} - \theta_{M - 1}) &
+\scriptstyle      -sin(\theta_{M} - \theta_{M - 2}) &
+\scriptstyle      sin(\theta_{M - 1} - \theta_{M - 2}) \\
 
-      sin(\theta_{M} - \theta_{M - 1})
-      0 &
-      0 &
-      \ldots &
-      0 &
-      sin(\theta_{1} - \theta_{M}) &
-      sin(\theta_{1} - \theta_{M - 1}) \\
+\scriptstyle      sin(\theta_{M} - \theta_{M - 1}) &
+\scriptstyle      0 &
+\scriptstyle      0 &
+\scriptstyle      \ldots &
+\scriptstyle      0 &
+\scriptstyle      sin(\theta_{1} - \theta_{M}) &
+\scriptstyle      sin(\theta_{1} - \theta_{M - 1}) \\
  \end{array}
  \right)
  $$
