[DOC] thesis: fix 1 spelling mistake.

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -256,8 +256,8 @@ $h \in \mathbb{R}^{M}$ в
 
 \begin{enumerate}
  \item Расстояние от $h$ до вектора $y \in \mathbb{R}^{M}$, полученного из
-измерений, минимально
- \item Потроенное по набору опорных чисел выпуклое тело соответствует
+измерений, минимально.
+ \item Построенное по набору опорных чисел выпуклое тело соответствует
 известной априорной информации об объекте.
 \end{enumerate}
 
