--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -115,8 +115,10 @@
 @thesis{thesis/Lele90,
   author = {A. S. Lele},
   title = {Convex set reconstruction from support line measurements and its
-  application to to laser radar data, S. M. thesis. Massachusetts Institute of
-  Technology, Cambridge, Mass.},
+  application to to laser radar data},
+  type = {S. M. thesis},
+  institution = {Massachusetts Institute of Technology},
+  publisher = {Cambridge, Mass.},
   year = {1990}
 }
 TODO: correct the place of publishing of Lele's B. S. Thesis.
