[DOC] thesis: fix formatting in bibtex file

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -50,7 +50,8 @@
   number = 3,
   pages = {379-403},
   timestamp = {2006-09-11T00:00:00.000+0200},
-  title = {Support Function Representation of Convex Bodies, Its Application in Geometric Computing, and Some Related Representations.},
+  title = {Support Function Representation of Convex Bodies, Its Application in
+  Geometric Computing, and Some Related Representations.},
   url = {http://dblp.uni-trier.de/db/journals/cviu/cviu72.html#GhoshK98},
   volume = 72,
   year = 1998
@@ -94,7 +95,8 @@
 
 @article{journals/jmiv/KarlKVW96,
   added-at = {2010-03-05T00:00:00.000+0100},
-  author = {Karl, William Clement and Kulkarni, Sanjeev R. and Verghese, George C. and Willsky, Alan S.},
+  author = {Karl, William Clement and Kulkarni, Sanjeev R. and Verghese,
+  George C. and Willsky, Alan S.},
   biburl = {http://www.bibsonomy.org/bibtex/226d2f621dcf7d0b5feefdf9c4f78adef/dblp},
   date = {2010-03-05},
   description = {dblp},
@@ -158,7 +160,8 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
 }
 @inproceedings{conf/compgeom/MehlhornNSSSSU96,
   added-at = {2002-12-13T00:00:00.000+0100},
-  author = {Mehlhorn, Kurt and Näher, Stefan and Schilz, Thomas and Schirra, Stefan and Seel, Michael and Seidel, Raimund and Uhrig, Christian},
+  author = {Mehlhorn, Kurt and Näher, Stefan and Schilz, Thomas and 
+  Schirra, Stefan and Seel, Michael and Seidel, Raimund and Uhrig, Christian},
   biburl = {http://www.bibsonomy.org/bibtex/2df06cd588685090a9bcdd63f7000bcf2/dblp},
   booktitle = {Symposium on Computational Geometry},
   date = {2002-12-13},
@@ -176,7 +179,8 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
 
 @article{journals/comgeo/MehlhornNSSSSU99,
   added-at = {2011-07-04T00:00:00.000+0200},
-  author = {Mehlhorn, Kurt and Näher, Stefan and Seel, Michael and Seidel, Raimund and Schilz, Thomas and Schirra, Stefan and Uhrig, Christian},
+  author = {Mehlhorn, Kurt and Näher, Stefan and Seel, Michael and Seidel,
+  Raimund and Schilz, Thomas and Schirra, Stefan and Uhrig, Christian},
   biburl = {http://www.bibsonomy.org/bibtex/28c3e058a6af3798794a7bbef71ebb816/dblp},
   ee = {http://dx.doi.org/10.1016/S0925-7721(98)00036-4},
   interhash = {ab58f7b747186cf8864bd83436894192},
