[DOC] thesis: fix mistake in formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -749,7 +749,7 @@ $$
 \begin{flushleft}
  \textbf{Теорема 3.} \textbf{Обобщенная двумерная опорная теорема}.
  Набор действительных чисел
- $h = (h_{1}, h_{2}, \ldots, h_{M}) \in \mathfrak{R}^{M}$
+ $h = (h_{1}, h_{2}, \ldots, h_{M}) \in \mathbb{R}^{M}$
  является набором опорных чисел по направлениям вдоль углов
  $\theta_{1} < \theta_{2} < \ldots < \theta_{M}$ тогдя и только тогда, когда
  выполнено следующее матричное неравенство:
