[DOC] thesis: begin BNGON algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -824,6 +824,32 @@ $$
  $$
 \end{flushleft}
 
+Данный алгоритм авторы называют NUA (от nonuniform angles).
+
+\subsubsection{Наилучший N-угольник по M измерениям с заданными углами 
+восстановления}
+
+Данный алгоритм был разработан для случая, когда известна следующая априорная 
+информация об объекте: точное количество сторон многоугольника и углы наклона 
+нормалей к этим сторонам (эти углы далее будут называться \textbf{углами 
+восстановления}). Такая информация позволяет получать более качественную оценку 
+многоугольника.
+
+Обозначим углы измерений через $\{\theta_{1}, \theta_{2}, \ldots, 
+\theta_{M}\}$, величины приближенно измеренных опорных через $\{y_{1}, y_{2}, 
+\ldots, y_{M}\}$, а известные углы восстановления через $\{\phi_{1}, 
+\phi_{2}, \ldots, \phi_{N}\}$. По этим данным требуется построить N-угольник, 
+определяемый  согласованным набором опорных чисел $\{h_{\phi}(\phi_{1}), 
+h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})\}$ по заданным углам 
+восстановления, который доставляет минимум для следующего функционала:
+
+$$
+J[h_{\phi}(\phi_{1}), h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})] =
+\sum \limits_{i = 1}^{M}[h_{\phi}(\theta_{i}) - y_{i}]^{2}
+$$
+
+
+
 
 \newpage
 \section{Предлагаемый подход}
