[DOC] thesis: add formula for support function values at measurement angles

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -848,6 +848,24 @@ J[h_{\phi}(\phi_{1}), h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})] =
 \sum \limits_{i = 1}^{M}[h_{\phi}(\theta_{i}) - y_{i}]^{2}
 $$
 
+Как известно, опорная функция многоугольника представляет собой 
+кусочно-синусоидальную фукнцию. Поэтому значения $h_{\phi}(\theta_{i})$ всегда 
+можно вычислить следующим образом:
+
+\begin{enumerate}
+ \item Найти соседние углы воостановления $\phi_{L_{i}}$ и $\phi_{R_{i}}$ 
+такие, что $\phi_{L_{i}} < \theta_{i} < \phi_{R_{i}}$ и на отрезке 
+$[\phi_{L_{i}}, \phi_{R_{i}}]$ нет других углов восстановления.
+ \item Вычислить $h_{\phi}(\theta_{i})$ по следующей формуле:
+\end{enumerate}
+
+$$
+h_{\phi}(\theta_{i}) =
+\frac{sin(\phi_{R_{i}} - \theta_{i})}{sin(\phi_{R_{i}} - \phi_{L_{i}})} 
+h_{L_{i}} +
+\frac{sin(\theta_{i} - \phi_{L_{i}})}{sin(\phi_{R_{i}} - \phi_{L_{i})}} 
+h_{R_{i}}
+$$
 
 
 
