[DOC] thesis: fix 1 spelling mistake

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -714,7 +714,7 @@ Kulkarni и Willsky, которое было описано в статье
 
 Данное исследование охватывает совершенно новую область применения --
 распознание формы объектов по данным лазерного радара. В ней описано обобщение
-первый алгоритма ближайшего набора Prince и Willsky для случая, когда
+первого алгоритма ближайшего набора Prince и Willsky для случая, когда
 направления, по которым производится измерение опорной функции, распределены
 произвольным образом. Также в ней вводится 2 новых алгоритма, которые позволяют
 строить тело на основе априорной информации о количестве его сторон и
