[DOC] thesis: end subsubsection about BNGON

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -882,6 +882,15 @@ $$
 y)^{T} (A h_{\phi} - y)
 $$
 
+где $A$ есть $M \times N$ матрица, строками которой являются коэффициенты 
+линейных комбинаций элементов вектора $h_{\phi} = [h_{\phi}(\phi_{1})c, 
+h_{\phi}(\phi_{2}), \ldots, {\phi}(\phi_{N})]^{T}$, через которые 
+выражаются соответствующие опорные числа $h_{\phi}(\theta_{1}), 
+h_{\phi}(\theta_{2}), \ldots, h_{\phi}(\theta_{M})$ по углам измерений.
+
+Поскольку рассматрриваемый функционал является квадратичным, а ограничения на 
+условия минимизации являются линейными, искомый минимум может быть найден с 
+помощью стандартных методов квадратичного программирования.
 
 \newpage
 \section{Предлагаемый подход}
