[DOC] thesis: begin BNGONROT algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -826,21 +826,21 @@ $$
 
 Данный алгоритм авторы называют NUA (от nonuniform angles).
 
-\subsubsection{Наилучший N-угольник по M измерениям с заданными углами 
+\subsubsection{Наилучший N-угольник по M измерениям с заданными углами
 восстановления}
 
 Данный алгоритм был разработан для случая, когда известна следующая априорная 
 информация об объекте: точное количество сторон многоугольника и углы наклона 
-нормалей к этим сторонам (эти углы далее будут называться \textbf{углами 
-восстановления}). Такая информация позволяет получать более качественную оценку 
+нормалей к этим сторонам (эти углы далее будут называться \textbf{углами
+восстановления}). Такая информация позволяет получать более качественную оценку
 многоугольника.
 
-Обозначим углы измерений через $\{\theta_{1}, \theta_{2}, \ldots, 
-\theta_{M}\}$, величины приближенно измеренных опорных через $\{y_{1}, y_{2}, 
-\ldots, y_{M}\}$, а известные углы восстановления через $\{\phi_{1}, 
-\phi_{2}, \ldots, \phi_{N}\}$. По этим данным требуется построить N-угольник, 
-определяемый  согласованным набором опорных чисел $\{h_{\phi}(\phi_{1}), 
-h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})\}$ по заданным углам 
+Обозначим углы измерений через $\{\theta_{1}, \theta_{2}, \ldots,
+\theta_{M}\}$, величины приближенно измеренных опорных чисел через $\{y_{1},
+y_{2}, \ldots, y_{M}\}$, а известные углы восстановления через $\{\phi_{1},
+\phi_{2}, \ldots, \phi_{N}\}$. По этим данным требуется построить N-угольник,
+определяемый  согласованным набором опорных чисел $\{h_{\phi}(\phi_{1}),
+h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})\}$ по заданным углам
 восстановления, который доставляет минимум для следующего функционала:
 
 $$
@@ -848,26 +848,26 @@ J[h_{\phi}(\phi_{1}), h_{\phi}(\phi_{2}), \ldots, h_{\phi}(\phi_{N})] =
 \sum \limits_{i = 1}^{M}[h_{\phi}(\theta_{i}) - y_{i}]^{2}
 $$
 
-Как известно, опорная функция многоугольника представляет собой 
+Как известно, опорная функция многоугольника представляет собой
 кусочно-синусоидальную фукнцию. Поэтому значения $h_{\phi}(\theta_{i})$ всегда 
 можно вычислить следующим образом:
 
 \begin{enumerate}
- \item Найти соседние углы воостановления $\phi_{L_{i}}$ и $\phi_{R_{i}}$ 
-такие, что $\phi_{L_{i}} < \theta_{i} < \phi_{R_{i}}$ и на отрезке 
+ \item Найти соседние углы воостановления $\phi_{L_{i}}$ и $\phi_{R_{i}}$
+такие, что $\phi_{L_{i}} < \theta_{i} < \phi_{R_{i}}$ и на отрезке
 $[\phi_{L_{i}}, \phi_{R_{i}}]$ нет других углов восстановления.
  \item Вычислить $h_{\phi}(\theta_{i})$ по следующей формуле:
 \end{enumerate}
 
 $$
 h_{\phi}(\theta_{i}) =
-\frac{sin(\phi_{R_{i}} - \theta_{i})}{sin(\phi_{R_{i}} - \phi_{L_{i}})} 
+\frac{sin(\phi_{R_{i}} - \theta_{i})}{sin(\phi_{R_{i}} - \phi_{L_{i}})}
 h_{L_{i}} +
-\frac{sin(\theta_{i} - \phi_{L_{i}})}{sin(\phi_{R_{i}} - \phi_{L_{i})}} 
+\frac{sin(\theta_{i} - \phi_{L_{i}})}{sin(\phi_{R_{i}} - \phi_{L_{i})}}
 h_{R_{i}}
 $$
 
-Используя это соотношение, задачу минимизации можно переформулировать следующим 
+Используя это соотношение, задачу минимизации можно переформулировать следующим
 образом:
 
 $$
@@ -878,19 +878,34 @@ $$
  \vdots \\
  \widehat{h}_{\phi}(\phi_{N}) \\
 \end{array}
-\right) = \operatornamewithlimits{argmin}_{C h_{\phi} \geq 0} (A h_{\phi} - 
+\right) = \operatornamewithlimits{argmin}_{C h_{\phi} \geq 0} (A h_{\phi} -
 y)^{T} (A h_{\phi} - y)
 $$
 
-где $A$ есть $M \times N$ матрица, строками которой являются коэффициенты 
-линейных комбинаций элементов вектора $h_{\phi} = [h_{\phi}(\phi_{1})c, 
-h_{\phi}(\phi_{2}), \ldots, {\phi}(\phi_{N})]^{T}$, через которые 
-выражаются соответствующие опорные числа $h_{\phi}(\theta_{1}), 
+где $A$ есть $M \times N$ матрица, строками которой являются коэффициенты
+линейных комбинаций элементов вектора $h_{\phi} = [h_{\phi}(\phi_{1})c,
+h_{\phi}(\phi_{2}), \ldots, {\phi}(\phi_{N})]^{T}$, через которые
+выражаются соответствующие опорные числа $h_{\phi}(\theta_{1}),
 h_{\phi}(\theta_{2}), \ldots, h_{\phi}(\theta_{M})$ по углам измерений.
 
-Поскольку рассматрриваемый функционал является квадратичным, а ограничения на 
-условия минимизации являются линейными, искомый минимум может быть найден с 
+Поскольку рассматрриваемый функционал является квадратичным, а ограничения на
+условия минимизации являются линейными, искомый минимум может быть найден с
 помощью стандартных методов квадратичного программирования.
+
+\subsubsection{Наилучший N-угольник по M измерениям с заданными относительными 
+углами}
+
+Данный алгоритм предназначен для случая, когда о теле доступна нексолько
+меньшая информация, а именно известны относительные углы между нормалями, но
+абсолютные значения этих углов неизвестны.
+
+Пусть как и раньше $\{\theta_{1}, \theta_{2}, \ldots,
+\theta_{M}\}$ суть углы измерений, а величины приближенно измеренных опорных
+чисел суть $\{y_{1}, y_{2}, \ldots, y_{M}\}$. Отличие от предыдущего алгоритма 
+состоит в том, что углами восстановления явлются $\{\phi_{1} + \alpha,
+\phi_{2} + \alpha, \ldots, \phi_{N} + \alpha\}$, где $\{\phi_{1}, \phi_{2},
+\ldots, \phi_{N}\}$ известны, а $\alpha \in [0, 2 \pi]$ служит неизвестным
+смещением углов восстановления.
 
 \newpage
 \section{Предлагаемый подход}
