[DOC] thesis: add formula for BNGONROT step problem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -925,6 +925,20 @@ h_{L_{i}} +
 h_{R_{i}}
 $$
 
+Однако данный функционал не является квадратичным вследствие того, что
+неизвестная $\alpha$ входит в выражение через аргументы тригонометрических
+функций. Тем не менее, авторы приводят основанный на квадартичном 
+программировании алгоритм, который позволяет решить эту задачу.
+
+Обозначим через $J_{h_{\phi}}(\alpha)$ минимум функционала по значениям опорных 
+чисел при фиксированном значении смещения $\alpha$.
+
+$$
+J_{h_{\phi}}(\alpha) = \min_{{h_{\phi}(\phi_{i} + \alpha)}} J[\alpha,
+h_{\phi}(\phi_{1} + \alpha), h_{\phi}(\phi_{2} + \alpha), \ldots,
+h_{\phi}(\phi_{N} + \alpha)]
+$$
+
 \newpage
 \section{Предлагаемый подход}
 
