[DOC] thesis: add 1 more formula in BNGONROT

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -939,6 +939,22 @@ h_{\phi}(\phi_{1} + \alpha), h_{\phi}(\phi_{2} + \alpha), \ldots,
 h_{\phi}(\phi_{N} + \alpha)]
 $$
 
+Самым простым решением данной задачи является решение методом грубой
+силы: перебор некоторого большого набора величин смещений $\alpha$, взятых с
+определенным шагом. Такой подход является, без сомнения, довольно трудоемким.
+Поэтому авторы разработали более эффективный градиентный алгоритм. Сущность
+задачи внесла два важных отличия в этот алгоритм по сравнению с обычным
+алгоритмом градиентного спуска. Во-первых, заметим что
+
+$$
+J_{h_{\phi}}(\alpha) = J[\alpha,
+h_{\phi}^{*}(\phi_{1} + \alpha), h_{\phi}^{*}(\phi_{2} + \alpha), \ldots,
+h_{\phi}^{*}(\phi_{N} + \alpha)]
+$$
+
+где величины $h_{\phi}^{*}(\phi_{i} + \alpha)$ доставляют минимум для
+функционала $J_{h_{\phi}}(\alpha)$.
+
 \newpage
 \section{Предлагаемый подход}
 
