[DOC] thesis: continue BNGOT with 1 more formula

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -976,6 +976,17 @@ h_{\phi}^{*}(\phi_{N} + \alpha)] =
 \alpha} [h_{\phi}^{*}(\theta_{i}) - y(\theta_{i})]
 $$
 
+где используя известное выражение для опорных чисел в углах измерения через
+опорные числа в углах восстановления можно получить:
+
+$$
+\frac{\partial h_{\phi}(\theta_{i})}{\partial \alpha} =
+\frac{cos(\phi_{R_{i}} + \alpha - \theta_{i})}{sin(\phi_{R_{i}} - \phi_{L_{i}})}
+h_{L_{i}} +
+\frac{cos(\theta_{i} - \phi_{L_{i}} - \alpha)}{sin(\phi_{R_{i}} - \phi_{L_{i})}}
+h_{R_{i}}
+$$
+
 \newpage
 \section{Предлагаемый подход}
 
