[DOC] thesis: fix 1 spelling mistake

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -927,7 +927,7 @@ $$
 
 Однако данный функционал не является квадратичным вследствие того, что
 неизвестная $\alpha$ входит в выражение через аргументы тригонометрических
-функций. Тем не менее, авторы приводят основанный на квадартичном 
+функций. Тем не менее, авторы приводят основанный на квадртичном 
 программировании алгоритм, который позволяет решить эту задачу.
 
 Обозначим через $J_{h_{\phi}}(\alpha)$ минимум функционала по значениям опорных 
