[DOC] thesis: add algorithm for finding all local minima in BNGONROT

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -987,6 +987,33 @@ h_{L_{i}} +
 h_{R_{i}}
 $$
 
+Вторым важным отличием представленного алгоритма является то, что функция
+$J_{h_{\phi}}(\alpha)$ является, вообще говоря, сильно невыпуклой функцией от
+$\alpha$ (авторы отсылают на \cite{thesis/Lele90}, где этот вопрос рассмотрен
+более детально). Данный факт приводит к тому, что для решения задачи нужно
+найти все возможные локальные минимумы функционала. Авторы предлагают делать это
+следующим образом.
+
+\begin{enumerate}
+ \item Положить $\alpha = 0$.
+ \item Вычислить $\frac{\partial J}{\partial \alpha}$.
+ \item Если $\frac{\partial J}{\partial \alpha} > 0$, сделать шаг градиентного 
+подъема, в противном случае -- шаг градиентного спуска.
+ \item Если изменение величины функционала не превышает заданный порог
+$\epsilon$, то сообщить о найденном локальном минимуме и перейти к шагу 7.
+ \item Если знак функционала не поменялся, вернуться к шагу 2
+ \item Если знак функционала поменялся, то методом деления пополам найти точку 
+изменения знака и сообщить, что в ней есть локальный минимум.
+ \item Если $\alpha < 2 \pi$, увличить $\alpha := \alpha + \delta \alpha$ и
+вернуться к шагу 2 для того, чтобы найти еще один локальный минимум. В противном
+случае завершить алгоритм.
+\end{enumerate}
+
+Затем нужно найти оптимальный минимум среди сообщенных данным алгоритмом.
+
+В статье авторы называют этот алгоритм BNGONROT (best N-gon with rotations).
+
+
 \newpage
 \section{Предлагаемый подход}
 
