[DOC] thesis: fix error in matrix in support theorem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -819,7 +819,7 @@ $$
 \scriptstyle      \ldots &
 \scriptstyle      0 &
 \scriptstyle      sin(\theta_{1} - \theta_{M}) &
-\scriptstyle      sin(\theta_{1} - \theta_{M - 1}) \\
+\scriptstyle      -sin(\theta_{1} - \theta_{M - 1}) \\
  \end{array}
  \right)
  $$
